--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-//    implementation 'com.google.android.gms:play-services-location:15.0.1'
-
+    // mapbox dependencies
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.6.1'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.5.2'
 
 //    implementation 'com.google.firebase:firebase-auth:16.0.5'
-//    implementation 'com.google.firebase:firebase-core:16.0.4'
+//    implementation 'com.google.firebase:firebase-core:16.0.5'
     //implementation 'com.google.firebase:firebase-auth:16.0.1:15.0.0'
 //    implementation 'com.google.firebase:firebase-auth:16.0.1:15.0.0'
 //    implementation 'com.google.firebase:firebase-database:16.0.1:15.0.0'
