Banking coins; yet to implement 25-coin daily limit and transferability to other players; profile page not started

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity android:name=".CreateAccountActivity" />
         <activity android:name=".ForgottenPasswordActivity" />
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".BankActivity"></activity>
     </application>
 
 </manifest>
