--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".CreateAccountActivity" />
         <activity android:name=".ForgottenPasswordActivity" />
         <activity android:name=".ProfileActivity" />
-        <activity android:name=".BankActivity"></activity>
+        <activity android:name=".BankActivity" />
+        <activity android:name=".TransferActivity"></activity>
     </application>
 
 </manifest>
