Updated bank UI slightly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <activity android:name=".ForgottenPasswordActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".BankActivity" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
